# discord-gateway

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
discord_gateway/: __main__.py  config.py  environment.py
discord_gateway/discord_bot/: bot.py
discord_gateway/server/: app.py  middleware.py  routes.py
discord_gateway/server/routes/: __init__.py  channel.py  health.py  route_table.py
tests/: test_discord_gateway.py
